# Fast-API

./: Fast Api with Poetry Steps.txt
02_kafka_messaging/todo/app/: main.py
fastAPI_auth/: compose.yaml
fastAPI_auth/auth_service/: Dockerfile  pyproject.toml
fastAPI_auth/auth_service/fastapi_auth/: main.py
helloworld/: Dockerfile  compose.yml  pyproject.toml
helloworld/.devcontainer/: devcontainer.json
helloworld/app/: main.py
hero_api/: database.db  pyproject.toml
hero_api/hero_api/: main.py
hero_api/tests/: test_main.py
new-project/: pyproject.toml
new-project/test_class/: main.py
new-project/tests/: main.py
prac-todo/: .env  Dockerfile.dev  compose.yaml  pyproject.toml
prac-todo/prac_todo/: main.py  settings.py
prac-todo/tests/: test-main.py
sql-model/: .env  pyproject.toml
sql-model/sql_model/: main.py  settings.py
uit-api-class/: pyproject.toml
