[tool.poetry]
name = "hero-api"
version = "0.1.0"
description = ""
authors = ["Muhammad Qasim <mohommadqasim1111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
psycopg = "^3.1.18"
sqlmodel = "^0.0.16"
pytest = "^8.1.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
